--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   },
   "homepage": "https://github.com/klawdyo/colors#readme",
   "scripts": {
-    "test": "cls && node tests/_.test | tap-spec"
+    "test": "yarn build && cls && node tests/_.test | tap-spec",
+    "build": "babel src -d dist"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "tap-spec": "^5.0.0",
     "tape": "^4.13.0"
   }
