--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-minify": "^0.5.1",
     "tap-spec": "^5.0.0",
     "tape": "^4.13.0"
   }
